[metadata]
name = pyhakuna
version = 0.0.4

description = A Python library to access the API of hakuna.ch
# long_description = see setup.py
long_description_content_type = text/markdown

license = BSD 3-Clause License
license_file = LICENSE

author = Christian Mäder
author_email = pyhakuna@cimnine.ch
url = https://github.com/cimnine/hakunaStreamDeck

classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Programming Language :: Python :: 3
  Topic :: Software Development

[options]
install_requires =
  requests >= 2.27.1
package_dir =
  = .
packages = find:

python_requires = >=3.7

[options.packages.find]
where = .
